fix hover z-index

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body {
   border: 2px solid white;
 }
 
+.imagen-archivo:hover {
+  border: 3px solid #00ff00;
+}
+
 .top-menu {
     width: 100%;
     height: 120px;
@@ -52,7 +56,11 @@ body {
   text-align: center;
 }
 
-a:link, a:visited, a:active, a:hover {
-    color: white;
+a:link, a:visited, a:active{
+    color: #00ff00;
     text-decoration: underline;
+}
+
+a:hover {
+  color: white !important;
 }
